change libsag to libzip & remove corestub